@@ -11,6 +11,7 @@ Build-Depends: debhelper (>= 9),
                gnome-pkg-tools,
                gtk-doc-tools,
                dh-autoreconf,
+               dh-exec,
                autotools-dev,
                intltool (>= 0.37.1),
                libasound2-dev [linux-any],
