@@ -1,3 +1,4 @@
+#!/usr/bin/dh-exec
 etc/xdg/autostart
 usr/lib/gnome-settings-daemon*
 usr/share/man
@@ -7,3 +8,4 @@ usr/share/gnome-settings-daemon
 usr/share/GConf
 usr/share/glib-2.0
 usr/share/polkit-1
+[linux-any] usr/lib/udev/rules.d/ lib/udev
