@@ -25,11 +25,7 @@ override_dh_autoreconf:
 	dh_autoreconf --as-needed
 
 override_dh_install:
-ifeq ($(DEB_HOST_ARCH_OS),linux)
-	dh_install -pgnome-settings-daemon --ignore=debian/gnome-settings-daemon.install \
-		debian/tmp/usr/lib/udev/rules.d/ lib/udev
-endif
-	dh_install --list-missing -X.la
+	dh_install --fail-missing -X.la
 
 # test-suite currently fails, see https://bugzilla.gnome.org/show_bug.cgi?id=770684
 override_dh_auto_test:
