@@ -7,6 +7,8 @@ gnome-settings-daemon (3.21.90-2) UNRELEASED; urgency=medium
     shipped downstream.
   * Drop conffile removal code from pre-wheezy.
   * Convert from cdbs to dh.
+  * Use dh-exec to install architecture specific files and switch from
+    --list-missing to --fail-missing, to avoid missing uninstalled files.
 
  -- Michael Biebl <biebl@debian.org>  Wed, 31 Aug 2016 23:48:57 +0200
 
